--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn_webpack",
   "version": "1.0.0",
   "description": "learn webpack",
-  "main": "index.js",
+  "private": true,
   "dependencies": {},
   "devDependencies": {
     "webpack": "^4.29.6",
