--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "learn webpack",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^4.17.11"
+  },
   "devDependencies": {
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
