03. 管理资源 加载 CSS

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
