--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "devDependencies": {
     "css-loader": "^2.1.0",
+    "csv-loader": "^3.0.2",
     "file-loader": "^3.0.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "xml-loader": "^1.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
