--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
     "file-loader": "^3.0.1",
