--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
     "xml-loader": "^1.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --open",
     "watch": "webpack --watch",
     "build": "webpack"
   },
